# weave-error-analysis

./: .env.example  .gitignore  CONTRIBUTING.md  PLAN.md  README.md  architecture_clean.md  close_loop.md  drop_agui.md  fails.md  feedbacks.md  logging.md  optimization.md  pyproject.toml  run.sh  sessions_improvements.md  taxonomy.md
agent/: AGENT_INFO.md  agent_server.py  agui_server.py  customer_support.py  generate_traces.py  requirements.txt  travel_planner.py
backend/: .env.example  .gitignore  config.py  database.py  errors.py  logger.py  main.py  models.py  pyproject.toml  requirements.txt  taxonomy.db  utils.py
backend/prompts/: __init__.py  base.py  category_suggestion.py  defaults.py  dimension_suggestion.py  query_generation.py  taxonomy_improvement.py  trace_analysis.py  tuple_generation.py  value_suggestion.py
backend/routers/: __init__.py  agents.py  categorize.py  feedback.py  prompts.py  sessions.py  settings.py  suggestions.py  synthetic.py  taxonomy.py  threads.py  traces.py
backend/services/: __init__.py  agent_client.py  agent_info.py  agui_client.py  annotation.py  auto_reviewer.py  batch_executor.py  conversation.py  dataset_publisher.py  feedback_sync.py  llm.py  session_repository.py  session_sync.py  settings.py  suggestion.py  synthetic.py  taxonomy.py  trace_discovery.py  weave_client.py  weave_url.py
data/: taxonomy_example.db
error_analysis_cli/: __init__.py  main.py
frontend/: .gitignore  next.config.mjs  package.json  pnpm-lock.yaml  tailwind.config.ts
frontend/src/app/: constants.ts  globals.css  layout.tsx  page.tsx
frontend/src/app/components/: BatchSaturationCharts.tsx  ConversationMessage.tsx  LandingPage.tsx  PromptEditDrawer.tsx  SaturationChart.tsx  SetupWizard.tsx
frontend/src/app/components/tabs/: AgentsTab.tsx  RunsTab.tsx  SessionsTab.tsx  SettingsTab.tsx  SuggestionsPanel.tsx  SyntheticTab.tsx  TaxonomyTab.tsx  ThreadsTab.tsx  index.ts
frontend/src/app/components/tabs/SyntheticTab/: BatchesPanel.tsx  DimensionsPanel.tsx  QueryPreviewCard.tsx  (+2 more)
frontend/src/app/components/ui/: DualRangeSlider.tsx  index.tsx
frontend/src/app/context/: AgentContext.tsx  AppContext.tsx  SessionContext.tsx  SyntheticContext.tsx  TaxonomyContext.tsx  index.ts
frontend/src/app/lib/: api.ts  errors.ts  logger.ts  useBatchExecution.ts  useBatchGeneration.ts  useKeyboardShortcuts.ts  useSSEStream.ts
frontend/src/app/types/: index.ts
frontend/src/app/utils/: formatters.ts
